--- a/home.html
+++ b/home.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link rel="stylesheet" href="build/home.css">
+   <!-- <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">-->
 </head>
 <body>
 
@@ -17,55 +19,34 @@
             </div>
         </div>
         <div class="vvp-accordion__content">
-            <div class="vvp-media-card">
-                <div class="vvp-media-card__content">
-                    <div class="vvp-media-card__media">
-                        <img src="assets/img/2.jpg" class="vvp-media-card__image" alt="">
-                    </div>
-                    <div class="vvp-media-card__info">
-                        <div>
-                            <div class="title">Title</div>
-                            <div class="text">Text1</div>
+            <div class="vvp-grid__col-lg-5">
+               <div class="vvp-accordion__left-column">
+                <div class="vvp-media-card">
+                    <div class="vvp-media-card__content">
+                        <div class="vvp-media-card__media">
+                            <img src="assets/img/2.jpg" class="vvp-media-card__image" alt="">
                         </div>
-                        <div>
-                            <div class="text">Text2</div>
-                            <div class="text">Text3</div>
+                        <div class="vvp-media-card__info">
+                            <div>
+                                <div class="title">Title</div>
+                                <div class="text">Text1</div>
+                            </div>
+                            <div>
+                                <div class="text">Text2</div>
+                                <div class="text">Text3</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="vvp-media-card__toggle">
-                        <img src="assets/img/arrow.svg" id="arrow" alt="">
-                    </div>
-                </div>
-                    <div class="vvp-media-card__open-content">
-                        <div class="vvp-media-card__explication">Something about</div>
-                    </div>
-                </div>
-            </div>
-            <div class="vvp-media-card">
-                <div class="vvp-media-card__content">
-                    <div class="vvp-media-card__media">
-                        <img src="assets/img/2.jpg" class="vvp-media-card__image" alt="">
-                    </div>
-                    <div class="vvp-media-card__info">
-                        <div>
-                            <div class="title">Title</div>
-                            <div class="text">Text1</div>
-                        </div>
-                        <div>
-                            <div class="text">Text2</div>
-                            <div class="text">Text3</div>
+                        <div class="vvp-media-card__toggle">
+                            <img src="assets/img/arrow.svg" id="arrow" alt="">
                         </div>
                     </div>
-                    <div class="vvp-media-card__toggle">
-                        <img src="assets/img/arrow.svg" id="arrow" alt="">
+                    <div class="vvp-media-card__dropdown-info">
+                        <div class="vvp-media-card__open-content">
+                            <div class="vvp-media-card__explication">Something about</div>
+                        </div>
                     </div>
                 </div>
-                <div class="vvp-media-card__dropdown-info">
-                    <div class="vvp-media-card__open-content">
-                        <div class="vvp-media-card__explication">Something about</div>
-                    </div>
-                </div>
-            </div>
+
             <div class="vvp-media-card">
                 <div class="vvp-media-card__content">
                     <div class="vvp-media-card__media">
@@ -91,6 +72,10 @@
                     </div>
                 </div>
             </div>
+               </div>
+            </div>
+            <div class="vvp-grid__col-lg-5">
+                <div class="vvp-accordion__right-column">
             <div class="vvp-media-card">
                 <div class="vvp-media-card__content">
                     <div class="vvp-media-card__media">
@@ -117,19 +102,46 @@
                 </div>
             </div>
 
+            <div class="vvp-media-card">
+                <div class="vvp-media-card__content">
+                    <div class="vvp-media-card__media">
+                        <img src="assets/img/2.jpg" class="vvp-media-card__image" alt="">
+                    </div>
+                    <div class="vvp-media-card__info">
+                        <div>
+                            <div class="title">Title</div>
+                            <div class="text">Text1</div>
+                        </div>
+                        <div>
+                            <div class="text">Text2</div>
+                            <div class="text">Text3</div>
+                        </div>
+                    </div>
+                    <div class="vvp-media-card__toggle">
+                        <img src="assets/img/arrow.svg" id="arrow" alt="">
+                    </div>
+                </div>
+                <div class="vvp-media-card__dropdown-info">
+                    <div class="vvp-media-card__open-content">
+                        <div class="vvp-media-card__explication">Something about</div>
+                    </div>
+                </div>
+            </div>
+                </div>
+        </div>
         </div>
     </div>
     </div>
-    <!--CHECKBOX-->
-  <!--  <label class="vvp-checkbox">
-        <input type="checkbox">
-        <span>checkbox</span>
-    </label>-->
-
 </div>
+    <!------------CHECKBOX--------->
+    <!--<label class="vvp-checkbox">
+        <input type="checkbox">
+        <span class="vvp-checkbox__square">checkbox</span>
+    </label>
+
+-->
 
 
-
-<script src="assets/js/flipBTN.js"></script>
+<script src="assets/js/flip-btn.js"></script>
 </body>
 </html>
