Change files location

--- a/home.html
+++ b/home.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" href="build/home.css">
-   <!-- <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">-->
+    <link rel="stylesheet" href="build/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 </head>
 <body>
 
@@ -134,12 +134,10 @@
     </div>
 </div>
     <!------------CHECKBOX--------->
-    <!--<label class="vvp-checkbox">
+    <label class="vvp-checkbox">
         <input type="checkbox">
         <span class="vvp-checkbox__square">checkbox</span>
     </label>
-
--->
 
 
 <script src="assets/js/flip-btn.js"></script>
