Add html and scss part of slider. in process of fixing grid

--- a/home.html
+++ b/home.html
@@ -8,9 +8,10 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 </head>
 <body>
-
+<div class="vvp-container">
 <div class="vvp-grid">
     <div class="vvp-grid__col-lg-10">
+        <!--TODO:Fix space between grid column-->
         <div class="vvp-accordion">
         <div class="vvp-accordion__header">
             <h1 class="vvp-accordion__title">Title</h1>
@@ -19,8 +20,8 @@
             </div>
         </div>
         <div class="vvp-accordion__content">
+            <div class="vvp-grid">
             <div class="vvp-grid__col-lg-6">
-               <div class="vvp-accordion__left-column">
                 <div class="vvp-media-card">
                     <div class="vvp-media-card__content">
                         <div class="vvp-media-card__media">
@@ -73,9 +74,8 @@
                 </div>
             </div>
                </div>
-            </div>
+
             <div class="vvp-grid__col-lg-6">
-                <div class="vvp-accordion__right-column">
             <div class="vvp-media-card">
                 <div class="vvp-media-card__content">
                     <div class="vvp-media-card__media">
@@ -129,8 +129,8 @@
             </div>
                 </div>
         </div>
-        </div>
     </div>
+        </div>
     </div>
 </div>
     <!------------CHECKBOX--------->
@@ -138,7 +138,7 @@
         <input type="checkbox">
         <span class="vvp-checkbox__square">checkbox</span>
     </label>
-
+</div>
 
 <script src="assets/js/flip-btn.js"></script>
 </body>
