Create js part of slider

--- a/slider.html
+++ b/slider.html
@@ -10,23 +10,23 @@
 
         <div class="vvp-grid__col-lg-8">
             <div class="vvp-slider">
-                <!--TODO:bring out buttons from image-->
                 <button class="vvp-slider__arrow vvp-slider__arrow--prev"><img src="assets/img/arrow.svg"></button>
                 <button class="vvp-slider__arrow vvp-slider__arrow--next"><img src="assets/img/arrow.svg"></button>
                 <div class="vvp-slider__gallery">
-                    <div class="vvp-slider__item">
+                <ul class="vvp-slider__gallery-items">
+                    <li class="vvp-slider__item">
                         <img src="assets/img/1.jpg" alt="" class="vvp-slider__img">
-                    </div>
-                    <div class="vvp-slider__item">
+                    </li>
+                    <li class="vvp-slider__item">
                         <img src="assets/img/2.jpg" alt="" class="vvp-slider__img">
-                    </div>
-                    <div class="vvp-slider__item">
+                    </li>
+                    <li class="vvp-slider__item">
                         <img src="assets/img/1.jpg" alt="" class="vvp-slider__img">
-                    </div>
-                    <div class="vvp-slider__item">
+                    </li>
+                    <li class="vvp-slider__item">
                         <img src="assets/img/2.jpg" alt="" class="vvp-slider__img">
-                    </div>
-
+                    </li>
+                </ul>
                 </div>
             </div>
         </div>
