Add minify css, add slider container

--- a/slider.html
+++ b/slider.html
@@ -9,6 +9,7 @@
 <div class="vvp-grid">
 
         <div class="vvp-grid__col-lg-8">
+            <div class="vvp-slider__wrap">
             <div class="vvp-slider">
                 <button class="vvp-slider__arrow vvp-slider__arrow--prev"><img src="assets/img/arrow.svg"></button>
                 <button class="vvp-slider__arrow vvp-slider__arrow--next"><img src="assets/img/arrow.svg"></button>
@@ -28,6 +29,7 @@
                     </li>
                 </ul>
                 </div>
+            </div>
             </div>
         </div>
     </div>
