Set up gulp file to create 2 different css-files(not minified and minified)

--- a/slider.html
+++ b/slider.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Slider</title>
-    <link rel="stylesheet" href="build/main.css">
+    <link rel="stylesheet" href="build/main.min.css">
 </head>
 <body>
 <div class="vvp-grid">
