--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="build/main.css">
+    
 
 </head>
 
@@ -25,9 +26,18 @@
                 <div class="label">Password</div>
                 <input id="password" type="password" class="vvp-input vvp-input--transparent">
             </div>
+            <div class="form-country">
+                <div class="label">Country</div>
+                <input id="country" maxlength="50" minlength="2" type="text" class="vvp-input vvp-input--transparent menu" autocomplete="off">
+                <!--<div class="dropdown" id="dropdown">-->
+                <ul class="countryAutoComplete" id="countryAutoComplete">
+                </ul>
+                </div>
             <button type="submit" href="#" class="vvp-button vvp-button--fill">LOG IN</button>
         </form>
     </div>
 </body>
+
+<script src="login.js"></script>
 
 </html>
