change file placement

--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
                             </div>
                         </div>
                         <div class="vvp-media-card__toggle">
-                            <img src="assets/img/arrow.svg" id="arrow" alt="">
+                            <img src="assets/img/arrow.svg" class="mediacard-arrow" alt="">
                         </div>
                     </div>
                     <div class="vvp-media-card__dropdown-info">
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                     <div class="vvp-media-card__toggle">
-                        <img src="assets/img/arrow.svg" id="arrow" alt="">
+                        <img src="assets/img/arrow.svg"  class="mediacard-arrow" alt="">
                     </div>
                 </div>
                 <div class="vvp-media-card__dropdown-info">
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                     <div class="vvp-media-card__toggle">
-                        <img src="assets/img/arrow.svg" id="arrow" alt="">
+                        <img src="assets/img/arrow.svg" class="mediacard-arrow" alt="">
                     </div>
                 </div>
                 <div class="vvp-media-card__dropdown-info">
@@ -117,7 +117,7 @@
                         </div>
                     </div>
                     <div class="vvp-media-card__toggle">
-                        <img src="assets/img/arrow.svg" id="arrow" alt="">
+                        <img src="assets/img/arrow.svg" class="mediacard-arrow" alt="">
                     </div>
                 </div>
                 <div class="vvp-media-card__dropdown-info">
