fix login styles

--- a/login.html
+++ b/login.html
@@ -13,29 +13,29 @@
     <div class="login">
         <div class="logo">
             <a href="#">
-                <img src="img/s-lhoved-02.svg" id="logo" alt="">
+                <img src="" id="logo" alt="">
             </a>
         </div>
-        <form role="form" name="formLogin">
+        <form role="form" class="formLogin">
             <div class="form-name">
-                <div class="label">Name</div>
+                <div class="label">Name:</div>
                 <input id="name" maxlength="50" minlength="2" type="text" class="vvp-input vvp-input--transparent">
             </div>
             <div class="form-password">
-                <div class="label">Password</div>
+                <div class="label">Password:</div>
                 <input id="password" type="password" class="vvp-input vvp-input--transparent">
             </div>
             <div class="form-country">
-                <div class="label">Country</div>
+                <div class="label">Country:</div>
                 <input id="country" maxlength="50" minlength="2" type="text" class="vvp-input vvp-input--transparent menu" autocomplete="off">
                 <ul class="countryAutoComplete" id="countryAutoComplete">
                 </ul>
                 </div>
-            <button type="submit" href="#" class="vvp-button vvp-button--fill">LOG IN</button>
+            <button type="submit" href="#" class="vvp-button vvp-button--fill">Log in</button>
         </form>
     </div>
 </body>
 
-<script src="/assets/js/login.js"></script>
+<script src="assets/js/login.js"></script>
 
 </html>
