fix menu + add styles for icons

--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
 		<aside class="vvp-menu">
 			<div class="vvp-menu__header">
 				<a href="#" class="vvp-menu__close">
-					<img src="assets/img/cross.svg" alt="" class="vvp-menu__icon vvp-menu__icon--cross">
+					<img src="assets/img/cross.svg" alt="" class="vvp-icon vvp-menu__icon">
 					<span>Close</span>
 				</a>
 			</div>
@@ -43,8 +43,8 @@
 			</nav>
 		</aside>
 		<div class="vvp-container">
-			<div class="vvp-menu-blur"></div>
-			<img src="assets/img/nav.svg" alt="nav" class="vvp-menu__icon vvp-menu__open">
+			<div class="vvp-onmenu-background"></div>
+			<img src="assets/img/nav.svg" alt="nav" class="vvp-icon vvp-menu-open">
 		</div>
 	<script src="assets/js/off-canvas-menu.js"></script>
 	</body>
